...
sealed class Screen(
    val route: String,
    val selectedIcon: ImageVector? = null,
    val unselectedIcon: ImageVector? = null,
    val label: String? = null
) {
    object Home : Screen("home", Icons.Default.Home, Icons.Outlined.Home, "Home")
    object PeriodHistory : Screen("period_history", Icons.Default.WaterDrop, Icons.Outlined.WaterDrop, "Periods")
    object Calendar : Screen("calendar", Icons.Default.DateRange, Icons.Outlined.DateRange, "Calendar")
    object Analysis : Screen("analysis", Icons.Default.Timeline, Icons.Outlined.Timeline, "Analysis")
    object Logging : Screen("logging")
    object Details : Screen("details/{date}") {
        fun createRoute(date: Long) = "details/$date"
...
